# Executorch_runner_cm33

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SETUP.md  SETUP_GUIDE.md  example.yml  mcux_include.json  readme.md
debug/: .cmake.dotconfig.checksum  .config  .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  executorch_runner_cm33.elf  executorch_runner_cm33_source_list.txt  mcux_config.h  output.map  runners.yaml
debug/Kconfig/: headers.txt  sources.txt
debug/components/: cmake_install.cmake
debug/components/IS42SM16800H/: cmake_install.cmake
debug/components/adc_sensor/: cmake_install.cmake
debug/components/assert/: cmake_install.cmake
debug/components/audio/: cmake_install.cmake
debug/components/aws_iot/: cmake_install.cmake
debug/components/button/: cmake_install.cmake
debug/components/clock/: cmake_install.cmake
debug/components/codec/: cmake_install.cmake
debug/components/common_task/: cmake_install.cmake
debug/components/conn_fwloader/: cmake_install.cmake
debug/components/coremark/: cmake_install.cmake
debug/components/crc/: cmake_install.cmake
debug/components/debug/: cmake_install.cmake
debug/components/debug_console/: cmake_install.cmake
debug/components/debug_console_lite/: cmake_install.cmake
debug/components/debug_console_rtt/: cmake_install.cmake
debug/components/display/: cmake_install.cmake
debug/components/edgefast_wifi/: cmake_install.cmake
debug/components/eeprom_emulation/: cmake_install.cmake
debug/components/ele_base_api/: cmake_install.cmake
debug/components/ele_crypto/: cmake_install.cmake
debug/components/ele_hseb/: cmake_install.cmake
debug/components/exception_handling/: cmake_install.cmake
debug/components/expander/: cmake_install.cmake
debug/components/flash/: cmake_install.cmake
debug/components/format/: cmake_install.cmake
debug/components/gen_hal/: cmake_install.cmake
debug/components/gpio/: cmake_install.cmake
debug/components/i2c/: cmake_install.cmake
debug/components/i3c_bus/: cmake_install.cmake
debug/components/imu_adapter/: cmake_install.cmake
debug/components/imx_sm_crc/: cmake_install.cmake
debug/components/internal_flash/: cmake_install.cmake
debug/components/lce/: cmake_install.cmake
debug/components/led/: cmake_install.cmake
debug/components/lists/: cmake_install.cmake
debug/components/log/: cmake_install.cmake
debug/components/mem_manager/: cmake_install.cmake
debug/components/messaging/: cmake_install.cmake
debug/components/misc_utilities/: cmake_install.cmake
debug/components/mpi_loader/: cmake_install.cmake
debug/components/mt48lc2m32b2/: cmake_install.cmake
debug/components/mt48lc4m16a2/: cmake_install.cmake
debug/components/mx25_flash/: cmake_install.cmake
debug/components/mx25l_flash/: cmake_install.cmake
debug/components/mx25r_flash/: cmake_install.cmake
debug/components/notifier/: cmake_install.cmake
debug/components/osa/: cmake_install.cmake
debug/components/panic/: cmake_install.cmake
debug/components/phy/: cmake_install.cmake
debug/components/pinctrl/: cmake_install.cmake
debug/components/pmic/: cmake_install.cmake
debug/components/power/: cmake_install.cmake
debug/components/power_manager/: cmake_install.cmake
debug/components/pwm/: cmake_install.cmake
debug/components/reset/: cmake_install.cmake
debug/components/reset1/: cmake_install.cmake
debug/components/rng/: cmake_install.cmake
debug/components/rpmsg/: cmake_install.cmake
debug/components/rtc/: cmake_install.cmake
debug/components/rtt/: cmake_install.cmake
debug/components/scmi/: cmake_install.cmake
debug/components/sdu/: cmake_install.cmake
debug/components/sensor/: cmake_install.cmake
debug/components/serial_manager/: cmake_install.cmake
debug/components/sgi_pkc/: cmake_install.cmake
debug/components/shell/: cmake_install.cmake
debug/components/silicon_id/: cmake_install.cmake
debug/components/slcd_engine/: cmake_install.cmake
debug/components/sm/: cmake_install.cmake
debug/components/smbus/: cmake_install.cmake
debug/components/smt/: cmake_install.cmake
debug/components/spi/: cmake_install.cmake
debug/components/srtm/: cmake_install.cmake
debug/components/storage/: cmake_install.cmake
debug/components/str/: cmake_install.cmake
debug/components/sx1502/: cmake_install.cmake
debug/components/systick_timer/: cmake_install.cmake
debug/components/time_stamp/: cmake_install.cmake
debug/components/timer/: cmake_install.cmake
debug/components/timer_lptmr/: cmake_install.cmake
debug/components/timer_manager/: cmake_install.cmake
debug/components/touch/: cmake_install.cmake
debug/components/uart/: cmake_install.cmake
debug/components/unity/: cmake_install.cmake
debug/components/video/: cmake_install.cmake
debug/components/wifi_bt_module/: cmake_install.cmake
debug/drivers/acmp/: cmake_install.cmake
debug/drivers/acmp_1/: cmake_install.cmake
debug/drivers/adc12/: cmake_install.cmake
debug/drivers/adc16/: cmake_install.cmake
debug/drivers/adc_12b1msps_sar/: cmake_install.cmake
debug/drivers/adc_5hc/: cmake_install.cmake
debug/drivers/adc_5v12b_ll18_015/: cmake_install.cmake
debug/drivers/adc_etc/: cmake_install.cmake
debug/drivers/aes/: cmake_install.cmake
debug/drivers/afe/: cmake_install.cmake
debug/drivers/aipstz/: cmake_install.cmake
debug/drivers/anactrl/: cmake_install.cmake
debug/drivers/aoi/: cmake_install.cmake
debug/drivers/aon_lpadc/: cmake_install.cmake
debug/drivers/asmc/: cmake_install.cmake
debug/drivers/asrc/: cmake_install.cmake
debug/drivers/audmix/: cmake_install.cmake
debug/drivers/bbnsm/: cmake_install.cmake
debug/drivers/bctu/: cmake_install.cmake
debug/drivers/bee/: cmake_install.cmake
debug/drivers/biss/: cmake_install.cmake
debug/drivers/caam/: cmake_install.cmake
debug/drivers/cadc/: cmake_install.cmake
debug/examples/: cmake_install.cmake
patches/: apply_patches.sh  ethosu_log.h
source/: arm_executor_runner.cpp  arm_perf_monitor.h  rsc_table.c  rsc_table.h
(+1333 files in other folders)
